--- a/css/nav.css
+++ b/css/nav.css
@@ -3,7 +3,7 @@ body {
     font-family: sans-serif;
 }
 
-.container {
+.menu-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
