article page: navigation and responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,17 @@
   padding: 0;
   margin: 0;
 }
+:root {
+  --bg-color: #0dc2e2;
+  --link-color: #fed642;
+  --color-3: #727272;
 
+  --primary-font: "Playfair Display", serif;
+  --secondary-font: "Montserrat", "Roboto", sans-serif;
+  --main-text-color: #000;
+  --white-space: 1rem;
+  --margin-bottom: 0.3rem;
+}
 html {
   font-size: 100%;
 }
@@ -24,34 +34,23 @@ html {
 }
 
 /*article page*/
-:root {
-  --bg-color: #0dc2e2;
-  --link-color: #fed642;
-  --color-3: #727272;
-
-  --primary-font: "Playfair Display", serif;
-  --secondary-font: "Montserrat", "Roboto", sans-serif;
-  --main-text-color: #000;
-  --white-space: 1rem;
-  --margin-bottom: 0.3rem;
-}
 
 .header-img {
   width: 100%;
   height: 200px;
-  background-image:url("/img/800px_COLOURBOX11893496.jpg");
+  background-image: url("/img/800px_COLOURBOX11893496.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
 
-.container {
+.article-container {
   z-index: 100;
   position: absolute;
   color: black;
   font-size: 24px;
   font-weight: bold;
   transform: translate(-50%, -50%);
-  top: 27%;
+  top: 39%;
   left: 50%;
   background-color: white;
 }
@@ -60,7 +59,7 @@ h1 {
 }
 .short-description {
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: var(--secondary-font);
@@ -77,7 +76,7 @@ h1 {
 
 .card {
   display: flex;
-  width: 60vw;
+  width: 90vw;
   height: 15vw;
   box-shadow: 0.5px 0.5px 7px var(--color-3);
   border-radius: 2px;
@@ -142,4 +141,87 @@ a.category > p:hover {
   text-decoration: none;
 }
 
-/**/
+@media only screen and (max-width: 768px) {
+  .header-img {
+    width: 100%;
+    height: 200px;
+    background-image: url("/img/800px_COLOURBOX11893496.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
+
+  .article-container {
+    z-index: 100;
+    position: absolute;
+    color: black;
+    font-size: 24px;
+    font-weight: bold;
+    transform: translate(-50%, -50%);
+    top: 37%;
+    left: 50%;
+    background-color: white;
+  }
+  h1 {
+    font-family: var(--primary-font);
+  }
+  .short-description {
+    position: absolute;
+    top: 75%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+    font-family: var(--secondary-font);
+  }
+  .image {
+    margin-top: 90%;
+    margin-left: 10%;
+    display: flex;
+    width: 80vw;
+    height: 60vw;
+    padding: 1rem;
+  }
+
+  .card {
+    display: flex;
+    width: 40vw;
+    height: 40vw;
+    box-shadow: 0.5px 0.5px 7px var(--color-3);
+    border-radius: 2px;
+    padding: 1rem;
+    overflow: hidden;
+    min-width: 400px;
+    margin-top: 5%;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+
+  .img-container {
+    width: max(20vw, 300px);
+    height: auto;
+    padding-right: 1rem;
+  }
+
+  .img-container > img {
+    width: auto;
+    height: 100%;
+  }
+
+  .text-column > h2 {
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: var(--margin-bottom);
+    font-family: var(--primary-font);
+  }
+
+  .description {
+    line-height: 140%;
+    margin-bottom: var(--margin-bottom);
+    font-family: var(--secondary-font);
+  }
+
+  .address {
+    font-size: 0.9rem;
+    color: var(--color-3);
+    margin-bottom: var(--margin-bottom);
+    font-family: var(--secondary-font);
+  }
+}
