--- a/nav.css
+++ b/nav.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+
 body {
     margin: 0;
     font-family: sans-serif;
@@ -32,6 +34,12 @@ nav li {
 li a {
     text-decoration: none;
     color: black;
+    font-family: 'Montserrat';
+    font-weight: 400;
+}
+
+li a:hover {
+    font-weight: 500;
 }
 
 .hamburger div {
@@ -59,7 +67,7 @@ li a {
         right: 0;
         top: 0;
         margin: 0;
-        height: 100vh;
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -67,6 +75,8 @@ li a {
         transform: translateX(100%);
         transition: 0.5s ease-in;
         background-color: lightgray;
+        opacity: 100%;
+        z-index: 1;
     }
 
     nav li {
@@ -80,6 +90,7 @@ li a {
         position: absolute;
         top: 1em;
         right: 1em;
+        z-index: 2
     }
 
     .nav-active {
@@ -109,5 +120,3 @@ li a {
         transform: rotate(45deg) translate(-5px, -5px);
     }
 }
-
-
