--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ a:hover {
 /*Index.html*/
 
 .ldn-card-cont {
-    width: 20rem;
-    height: 23rem;
+    width: 16rem;
+    height: 16rem;
     overflow: hidden;
 }
 
@@ -52,13 +52,19 @@ a:hover {
 
 .cards-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(350px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(250px, 100%), 1fr));
     justify-items: center;
     gap: 1.5rem;
 }
 
 .hidden {
     display: none;
+}
+
+.lnd-discover {
+    width: 100%;
+    height: 400px;
+    background-color: red;
 }
 
 /*article page*/
