--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,6 @@ a.category > p:hover {
   text-decoration: none;
 }
 
-<<<<<<< HEAD
 /**/
 
 /*newsletter page*/
@@ -185,7 +184,7 @@ a.category > p:hover {
 .newsletter-main {
   display: flex;
   flex-direction: column;
-  margin-top: 20em;
+  margin-top: 15em;
   padding-left: 2em;
 }
 
@@ -206,11 +205,20 @@ a.category > p:hover {
 }
 
 .register-form .sub-button {
-  width: 9vw;
-  height: 2vw;
-  border-radius: 10%;
-  font-family: var(--secondary-font);
-  font-size: 1rem;
+    text-align: center;
+    transition: all 0.2s ease;
+    cursor: pointer;
+    text-transform: uppercase;
+    background-color: #0dc2e2;
+    width: 6vw;
+    height: 2vw;
+    border-radius: 5px;
+    border: none;
+    color: white;
+  }
+  
+  .sub-button:hover {
+    background-color: var(--link-color);
 }
 
 /**/
@@ -303,7 +311,6 @@ input {
 
 .submit-button:hover {
   background-color: var(--link-color);
-=======
 /*Buttons*/
 
 /*Common styling for all buttons*/
@@ -464,5 +471,4 @@ button:focus,
 button:active,
 button:focus-within {
   outline: 0;
->>>>>>> b2eb1d5538135a9a5f3346c29abf801e4d4537c0
 }
