--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ html {
     --secondary-font: "Montserrat", "Roboto", sans-serif;
     --main-text-color: #000;
     --white-space: 1rem;
-    --margin-bottom: 0.3rem;
+    --margin-bottom: 1rem;
 }
 
 a {
@@ -39,10 +39,32 @@ a:hover {
 
 /*Index.html*/
 
+.article-card {
+    position: relative;
+    margin-bottom: var(--margin-bottom);
+    margin: 2rem 0;
+    border-bottom: 3px solid transparent;
+}
+
+.article-card:hover {
+    border-bottom: 3px solid var(--bg-color);
+    filter: contrast(0.9);
+}
+
+.lnd-margin {
+    margin: 0 2rem;
+}
+
 .ldn-card-cont {
-    width: 16rem;
-    height: 16rem;
+    width: 15rem;
+    height: 15rem;
     overflow: hidden;
+    border-radius: 3px;
+    box-shadow: 0px 0px 7px var(--color-3);
+}
+
+.ldn-card-cont:hover {
+    box-shadow: 0px 0px 9px var(--color-3);
 }
 
 .ldn-card-cont>img {
@@ -50,10 +72,15 @@ a:hover {
     width: auto;
 }
 
+.card-title {
+    padding: 0.3rem 0.2rem 0.5rem;
+    font-size: 1.2rem;
+    color: black;
+}
+
 .cards-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(min(250px, 100%), 1fr));
-    justify-items: center;
     gap: 1.5rem;
 }
 
@@ -63,8 +90,34 @@ a:hover {
 
 .lnd-discover {
     width: 100%;
-    height: 400px;
-    background-color: red;
+    height: 300px;
+    background: rgb(219, 243, 243);
+    margin: 2rem 0;
+}
+
+.lnd-discover-content {
+    max-width: 950px;
+    margin: auto;
+    padding: 2rem 0;
+    display: flex;
+    justify-content: space-between;
+    gap: 5rem;
+}
+
+.disc-col-2>p {
+    font-size: 1.2rem;
+    margin: 3rem 0;
+}
+
+.lnd-discover-content>h1 {
+    font-size: 4rem;
+    margin: 0.5rem 0;
+    text-align: right;
+    width: 300px;
+}
+
+.disc-col-2 button {
+    float: right;
 }
 
 /*article page*/
@@ -197,7 +250,7 @@ button {
 .landing-btn {
     padding: 0.3rem 0.5rem;
     border-radius: 5px;
-    margin: 0 0.3rem 1rem 0;
+    margin: 0.5rem 0.3rem 1rem 0;
 }
 
 .landing-btn.selected {
