First iteration index

--- a/css/map.css
+++ b/css/map.css
@@ -1,5 +1,5 @@
 #lnd-map {
-    width: 500px;
+    width: max(20rem, 40%);
     height: auto;
     margin: auto;
 }
@@ -35,7 +35,7 @@
 
 .modal-content {
     margin: 10% auto;
-    width: 30%;
+    width: 20rem;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
     animation-name: modalopen;
     animation-duration: var(--modal-duration);
