--- a/css/style.css
+++ b/css/style.css
@@ -56,11 +56,11 @@ a:hover {
 }
 
 .ldn-card-cont {
-    width: 15rem;
-    height: 15rem;
+    width: 100%;
     overflow: hidden;
     border-radius: 3px;
     box-shadow: 0px 0px 7px var(--color-3);
+    background-color: var(--bg-color);
 }
 
 .ldn-card-cont:hover {
@@ -68,8 +68,10 @@ a:hover {
 }
 
 .ldn-card-cont>img {
-    height: 100%;
-    width: auto;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    min-height: 227px;
 }
 
 .card-title {
@@ -80,8 +82,9 @@ a:hover {
 
 .cards-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(250px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(220px, 100%), 0.3fr));
     gap: 1.5rem;
+    justify-content: center;
 }
 
 .hidden {
@@ -90,18 +93,19 @@ a:hover {
 
 .lnd-discover {
     width: 100%;
-    height: 300px;
+    height: 20vw;
     background: rgb(219, 243, 243);
     margin: 2rem 0;
 }
 
 .lnd-discover-content {
-    max-width: 950px;
+    max-width: max(70%, 50rem);
     margin: auto;
     padding: 2rem 0;
     display: flex;
     justify-content: space-between;
     gap: 5rem;
+    flex-wrap: wrap;
 }
 
 .disc-col-2>p {
