--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ a:hover {
     margin: 0.5rem 0;
     text-align: right;
     width: 300px;
+    font-family: var(--primary-font);
 }
 
 .disc-col-2 button {
@@ -458,84 +459,82 @@ input {
 
 .submit-button:hover {
     background-color: var(--link-color);
-    /*Buttons*/
+}
 
-    /*Common styling for all buttons*/
+/*Buttons*/
 
-    button {
-        text-align: center;
-        text-decoration: none;
-        text-transform: uppercase;
-        transition: all 0.2s ease;
-        cursor: pointer;
-        border: 2px solid var(--bg-color);
-    }
+/*Common styling for all buttons*/
 
-    /*Landing page area-category*/
+button {
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all 0.2s ease;
+    cursor: pointer;
+    border: 2px solid var(--bg-color);
+}
 
-    .landing-btn {
-        <<<<<<< HEAD padding: 0.3rem 0.5rem;
-        border-radius: 5px;
-        margin: 0 0.3rem 1rem 0;
-        =======padding: 0.3rem 0.5rem;
-        border-radius: 5px;
-        margin: 0.5rem 0.3rem 1rem 0;
-        >>>>>>>origin/index
-    }
+/*Landing page area-category*/
 
-    .landing-btn.selected {
-        background: var(--bg-color);
-        color: white;
-    }
+.landing-btn {
+    padding: 0.3rem 0.5rem;
+    border-radius: 5px;
+    margin: 0.5rem 0.3rem 1rem 0;
+}
 
-    .landing-btn.unselected {
-        background: transparent;
-        color: var(--bg-color);
-        border: 2px solid var(--bg-color);
-    }
+.landing-btn.selected {
+    background: var(--bg-color);
+    color: white;
+}
 
-    /*Forms button*/
+.landing-btn.unselected {
+    background: transparent;
+    color: var(--bg-color);
+    border: 2px solid var(--bg-color);
+}
 
-    .forms-button {
-        background: var(--bg-color);
-        color: white;
-        padding: 0.7rem 2rem;
-        border-radius: 7px;
-        font-weight: 400;
-        font-size: 1rem;
-        letter-spacing: 1px;
-        margin: 0 1rem 1rem 0;
-    }
+/*Forms button*/
 
-    /*Button hover, active and other states*/
+.forms-button {
+    background: var(--bg-color);
+    color: white;
+    padding: 0.7rem 2rem;
+    border-radius: 7px;
+    font-weight: 400;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    margin: 0 1rem 1rem 0;
+}
 
-    button:hover,
-    .landing-btn.selected:hover {
-        background-color: var(--link-color);
-        border: 2px solid var(--link-color);
-    }
+/*Button hover, active and other states*/
 
-    button:active,
-    .landing-btn.selected:active {
-        background-color: transparent;
-        border: solid 2px var(--link-color);
-        color: var(--link-color);
-    }
+button:hover,
+.landing-btn.selected:hover {
+    background-color: var(--link-color);
+    border: 2px solid var(--link-color);
+}
 
-    .landing-btn.unselected:hover {
-        border: 2px solid var(--link-color);
-        color: var(--link-color);
-        background-color: transparent;
-    }
+button:active,
+.landing-btn.selected:active {
+    background-color: transparent;
+    border: solid 2px var(--link-color);
+    color: var(--link-color);
+}
 
-    .landing-btn.unselected:active {
-        border: 2px solid var(--link-color);
-        color: white;
-        background-color: var(--link-color);
-    }
+.landing-btn.unselected:hover {
+    border: 2px solid var(--link-color);
+    color: var(--link-color);
+    background-color: transparent;
+}
 
-    button:focus,
-    button:active,
-    button:focus-within {
-        outline: 0;
-    }
+.landing-btn.unselected:active {
+    border: 2px solid var(--link-color);
+    color: white;
+    background-color: var(--link-color);
+}
+
+button:focus,
+button:active,
+button:focus-within {
+    outline: 0;
+}
