--- a/css/category-list.css
+++ b/css/category-list.css
@@ -10,7 +10,7 @@ h1 {
 
 .categories {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 5vw;
     row-gap: 5vh;
     margin-top: 2vw;
@@ -19,44 +19,37 @@ h1 {
 }
 
 .category {
-    position: relative;
-    margin: 0;
+    width: 15vw;
+    height: 25vh;
+    margin-bottom: 10vh;
     padding: 0;
     box-shadow: 1px 1px 7px gray;
+    background-color: #0dc2e2;;
+}
+
+.category:hover {
+    background-color: #fed642;;
 }
 
 .categoryimage {
     width: 100%;
     height: 100%;
-    position: relative;
     padding: 0;
-    margin: 0;
-    filter:blur(1px);
+    border-radius: 5px;
+    margin-bottom: 0.5vw;
 }
 
 .categoryname {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     margin: 0;
-    font-size: 2vw;
-    text-align: center;
-    color: whitesmoke;
-    -webkit-text-stroke: 0.5px #201E1E;
-    width: 18vw;
+    font-size: 1.5vw;
+    color: black;
     font-family: 'Montserrat';
     font-weight: 700;
-    text-transform: uppercase;
+    text-align: center;
 }
 
-.categoryimage:hover {
-    z-index: 1;
-    filter:blur(0);
-}
-
-#barcategory {
-    justify-self: left;
+.category a {
+    text-decoration: none;
 }
 
 @media only screen and (max-width: 768px) {
