--- a/css/category-list.css
+++ b/css/category-list.css
@@ -19,8 +19,8 @@ h1 {
 }
 
 .category {
-    width: 15vw;
-    height: 25vh;
+    width: 13vw;
+    height: 13vw;
     margin-bottom: 10vh;
     padding: 0;
     box-shadow: 1px 1px 7px gray;
