--- a/css/category-list.css
+++ b/css/category-list.css
@@ -16,6 +16,7 @@ h1 {
     margin-top: 3vw;
     margin-left: 8vw;
     margin-right: 8vw;
+    margin-bottom: 3vw;
 }
 
 .category {
@@ -35,7 +36,6 @@ h1 {
     width: 100%;
     height: 100%;
     padding: 0;
-    border-radius: 5px;
     margin-bottom: 0.5vw;
 }
 
@@ -55,18 +55,33 @@ h1 {
 @media only screen and (max-width: 768px) {
     
     .categories {
-        grid-template-columns: 1fr 1fr;
+        display: flex;
+        flex-direction: column;
+        align-content: flex-start;
+        row-gap: 4vw;
+        margin-bottom: 0;
+    }
+
+    .category {
+        width: 80vw;
+        margin-bottom: 0;
     }
 
     .categoryname {
-        font-size: 3vw;
+        font-size: 16px;
+        transform: translateY(-10vw);
+        color: white;
+        text-align: center;
+        margin-left: 8vw;
     }
 
     h1 {
-        font-size: 4.5vw;
+        font-size: 20px;
+        margin-bottom: 5vw;
     }
 
     .categoryimage {
-        filter: blur(0);
+        width: 20vw;
+        margin: 0;
     }
 }
