--- a/css/nav.css
+++ b/css/nav.css
@@ -17,26 +17,77 @@ body {
     margin-left: 2rem;
 }
 
-nav ul {
+.menu {
     display: flex;
     justify-content: space-around;
     width: 50vw;
 }
 
-nav li {
-    list-style: none;
+button, .explore {
+    font-family: 'Montserrat';
+    font-weight: 500;
+    background: none;
+    border: none;
+    font-size: 16px;
 }
 
-li a {
+button a {
     text-decoration: none;
     color: black;
-    font-family: 'Montserrat';
-    font-weight: 400;
 }
 
-li a:hover {
+.explore:hover, button a:hover {
     font-weight: 500;
     color: #fed642;
+}
+
+.explore {
+    position: relative;
+}
+
+.explore:focus + ul {
+    opacity: 1;
+    pointer-events: all;
+    transform: translateY(0);
+}
+
+.dropdown ul {
+    position: absolute;
+    margin-left: 0;
+    padding-left: 0;
+    margin-top: 1vw;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: space-around;
+    align-items:flex-start;
+    flex-direction: column;
+    list-style: none;
+    border-radius: 4px;
+    font-family: 'Montserrat';
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-10px);
+    transition: all 0.4s ease;
+}
+
+.dropdown li {
+    background-color: #fed642;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dropdown li:hover {
+    background-color: #0dc2e2;
+}
+
+.dropdown a {
+    color: white;
+    text-decoration: none;
+
 }
 
 .hamburger div {
@@ -59,7 +110,7 @@ li a:hover {
         overflow-x: hidden;
     }
 
-    nav ul {
+    .menu {
         position: absolute;
         right: 0;
         top: 0;
@@ -76,7 +127,7 @@ li a:hover {
         z-index: 1;
     }
 
-    nav li {
+    .menu button {
         opacity: 0;
         padding-right: 2em;
     }
