--- a/css/nav.css
+++ b/css/nav.css
@@ -31,12 +31,13 @@ button, .explore {
     font-size: 16px;
 }
 
-button a {
+button .menulink {
     text-decoration: none;
     color: black;
+    font-weight: 500;
 }
 
-.explore:hover, button a:hover {
+.explore:hover, button .menulink:hover {
     font-weight: 500;
     color: #fed642;
 }
@@ -84,9 +85,10 @@ button a {
     background-color: #0dc2e2;
 }
 
-.dropdown a {
+.dropdown .menulink {
     color: white;
     text-decoration: none;
+    font-weight: 500;
 
 }
 
